add_library(brender STATIC
    core/fw/assocarr.c
    core/fw/assocarr.h
    core/fw/brbegin.c
    core/fw/brbegin.h
    core/fw/brbhook.c
    core/fw/brbhook.h
    core/fw/brlists.c
    core/fw/brlists.h
    core/fw/brprintf.c
    core/fw/brprintf.h
    core/fw/bswap.c
    core/fw/bswap.h
    core/fw/datafile.c
    core/fw/datafile.h
    core/fw/devlist.c
    core/fw/devlist.h
    core/fw/devsetup.c
    core/fw/devsetup.h
    core/fw/diag.c
    core/fw/diag.h
    core/fw/error.c
    core/fw/error.h
    core/fw/file.c
    core/fw/file.h
    core/fw/fwsetup.c
    core/fw/fwsetup.h
    core/fw/genfile.c
    core/fw/genfile.h
    core/fw/image.c
    core/fw/image.h
    core/fw/lexer.c
    core/fw/lexer.h
    core/fw/loader.c
    core/fw/loader.h
    core/fw/mem.c
    core/fw/mem.h
    core/fw/pattern.c
    core/fw/pattern.h
    core/fw/register.c
    core/fw/register.h
    core/fw/resource.c
    core/fw/resource.h
    core/fw/resreg.c
    core/fw/resreg.h
    core/fw/scratch.c
    core/fw/scratch.h
    core/fw/token.c
    core/fw/token.h

    core/host/himage.c
    core/host/himage.h
    core/host/hstsetup.c
    core/host/hstsetup.h

    core/math/angles.c
    core/math/angles.h
    core/math/fixed.c
    core/math/fixed.h
    core/math/matrix23.c
    core/math/matrix23.h
    core/math/matrix34.c
    core/math/matrix34.h
    core/math/matrix4.c
    core/math/matrix4.h
    core/math/plane.c
    core/math/plane.h
    core/math/quat.c
    core/math/quat.h
    core/math/transfrm.c
    core/math/transfrm.h
    core/math/vector.c
    core/math/vector.h

    core/pixelmap/pmdsptch.c
    core/pixelmap/pmdsptch.h
    core/pixelmap/pmsetup.c
    core/pixelmap/pmsetup.h

    core/std/brexcept.c
    core/std/brexcept.h
    core/std/brmath.c
    core/std/brmath.h
    core/std/brstddiag.c
    core/std/brstddiag.h
    core/std/brstdfile.c
    core/std/brstdfile.h
    core/std/brstdlib.c
    core/std/brstdlib.h
    core/std/brstdmem.c
    core/std/brstdmem.h
    core/std/logwrite.c
    core/std/logwrite.h

    core/v1db/actsupt.h
    core/v1db/actsupt.c
    core/v1db/chunkids.h
    core/v1db/dbsetup.c
    core/v1db/dbsetup.h
    core/v1db/def_mat.c
    core/v1db/def_mat.h
    core/v1db/def_mdl.c
    core/v1db/def_mdl.h
    core/v1db/def_otab.c
    core/v1db/def_otab.h
    core/v1db/enables.c
    core/v1db/enables.h
    core/v1db/matsupt.c
    core/v1db/matsupt.h
    core/v1db/regsupt.c
    core/v1db/regsupt.h
)

target_include_directories(brender
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
    PRIVATE
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
)
target_link_libraries(brender
    PUBLIC
        c2_hooks
)

add_library(brender_softrendr STATIC
    drivers/softrend/driver.c
)
target_link_libraries(brender_softrendr
    PRIVATE
        brender
        c2_hooks
)
target_compile_definitions(brender_softrendr
    PRIVATE
        BrDrv1Begin=BrDrv1SoftRendBegin
)
