add_library(brender STATIC
    core/fw/assocarr.c
    core/fw/assocarr.h
    core/fw/brbegin.c
    core/fw/brbegin.h
    core/fw/brbhook.c
    core/fw/brbhook.h
    core/fw/brlists.c
    core/fw/brlists.h
    core/fw/brprintf.c
    core/fw/brprintf.h
    core/fw/brqsort.c
    core/fw/brqsort.h
    core/fw/bswap.c
    core/fw/bswap.h
    core/fw/datafile.c
    core/fw/datafile.h
    core/fw/devlist.c
    core/fw/devlist.h
    core/fw/devsetup.c
    core/fw/devsetup.h
    core/fw/diag.c
    core/fw/diag.h
    core/fw/error.c
    core/fw/error.h
    core/fw/file.c
    core/fw/file.h
    core/fw/fwsetup.c
    core/fw/fwsetup.h
    core/fw/genfile.c
    core/fw/genfile.h
    core/fw/image.c
    core/fw/image.h
    core/fw/lexer.c
    core/fw/lexer.h
    core/fw/loader.c
    core/fw/loader.h
    core/fw/mem.c
    core/fw/mem.h
    core/fw/object.c
    core/fw/object.h
    core/fw/objectc.c
    core/fw/objectc.h
    core/fw/pattern.c
    core/fw/pattern.h
    core/fw/register.c
    core/fw/register.h
    core/fw/resource.c
    core/fw/resource.h
    core/fw/resreg.c
    core/fw/resreg.h
    core/fw/scratch.c
    core/fw/scratch.h
    core/fw/token.c
    core/fw/token.h
    core/fw/tokenval.c
    core/fw/tokenval.h

    core/host/himage.c
    core/host/himage.h
    core/host/hstsetup.c
    core/host/hstsetup.h

    core/math/angles.c
    core/math/angles.h
    core/math/fixed.c
    core/math/fixed.h
    core/math/matrix23.c
    core/math/matrix23.h
    core/math/matrix34.c
    core/math/matrix34.h
    core/math/matrix4.c
    core/math/matrix4.h
    core/math/plane.c
    core/math/plane.h
    core/math/quat.c
    core/math/quat.h
    core/math/transfrm.c
    core/math/transfrm.h
    core/math/vector.c
    core/math/vector.h

    core/pixelmap/font3x5f.c
    core/pixelmap/font3x5f.h
    core/pixelmap/font4x6p.c
    core/pixelmap/font4x6p.h
    core/pixelmap/font7x9p.c
    core/pixelmap/font7x9p.h
    core/pixelmap/fontptrs.c
    core/pixelmap/fontptrs.h
    core/pixelmap/genclip.c
    core/pixelmap/genclip.h
    core/pixelmap/gencopy.c
    core/pixelmap/gencopy.h
    core/pixelmap/pixelmap.c
    core/pixelmap/pixelmap.h
    core/pixelmap/pmdsptch.c
    core/pixelmap/pmdsptch.h
    core/pixelmap/pmfile.c
    core/pixelmap/pmfile.h
    core/pixelmap/pmmem.c
    core/pixelmap/pmmem.h
    core/pixelmap/pmsetup.c
    core/pixelmap/pmsetup.h
    core/pixelmap/pmutils.c
    core/pixelmap/pmutils.h

    core/std/brexcept.c
    core/std/brexcept.h
    core/std/brmath.c
    core/std/brmath.h
    core/std/brstddiag.c
    core/std/brstddiag.h
    core/std/brstdfile.c
    core/std/brstdfile.h
    core/std/brstdlib.c
    core/std/brstdlib.h
    core/std/brstdmem.c
    core/std/brstdmem.h
    core/std/logwrite.c
    core/std/logwrite.h

    core/v1db/actsupt.h
    core/v1db/actsupt.c
    core/v1db/chunkids.h
    core/v1db/custsupt.c
    core/v1db/custsupt.h
    core/v1db/dbsetup.c
    core/v1db/dbsetup.h
    core/v1db/def_mat.c
    core/v1db/def_mat.h
    core/v1db/def_mdl.c
    core/v1db/def_mdl.h
    core/v1db/def_otab.c
    core/v1db/def_otab.h
    core/v1db/enables.c
    core/v1db/enables.h
    core/v1db/matsupt.c
    core/v1db/matsupt.h
    core/v1db/modrend.c
    core/v1db/modrend.h
    core/v1db/modsupt.c
    core/v1db/modsupt.h
    core/v1db/otable.c
    core/v1db/otable.h
    core/v1db/prepmap.c
    core/v1db/prepmap.h
    core/v1db/prepmatl.c
    core/v1db/prepmatl.h
    core/v1db/prepmesh.c
    core/v1db/prepmesh.h
    core/v1db/preptab.c
    core/v1db/preptab.h
    core/v1db/render.c
    core/v1db/render.h
    core/v1db/regsupt.c
    core/v1db/regsupt.h
    core/v1db/stackids.h
    core/v1db/v1dbfile.c
    core/v1db/v1dbfile.h
)

target_include_directories(brender
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
    PRIVATE
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
)
target_link_libraries(brender
    PUBLIC
        c2_hooks
)

add_library(brender_softrendr STATIC
    drivers/softrend/driver.c
    drivers/softrend/facility.c
    drivers/softrend/facility.h
)
target_link_libraries(brender_softrendr
    PRIVATE
        brender
        c2_hooks
)
target_compile_definitions(brender_softrendr
    PRIVATE
        BrDrv1Begin=BrDrv1SoftRendBegin
)
