add_library(c2_common STATIC
    ../include/rec2_macros.h
    ../include/rec2_types.h

    brucetrk.c
    brucetrk.h
    car.c
    car.h
    crush.c
    crush.h
    cutscene.c
    cutscene.h
    depth.c
    depth.h
    drfile.c
    drfile.h
    drmem.c
    drmem.h
    errors.c
    errors.h
    globvars.c
    globvars.h
    globvrbm.c
    globvrbm.h
    globvrkm.c
    globvrkm.h
    globvrpb.c
    globvrpb.h
    grafdata.c
    grafdata.h
    graphics.c
    graphics.h
    init.c
    init.h
    input.c
    input.h
    loading.c
    loading.h
    main.c
    main.h
    sound.c
    sound.h
    structur.c
    structur.h
    utility.c
    utility.h
    video.c
    video.h
    world.c
    world.h
)
target_include_directories(c2_common
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>"
)
target_link_libraries(c2_common
    PUBLIC
        brender
        c2_hooks
        c2_platform
        S3::S3
)
