add_library(c2_common STATIC
    ../include/rec2_macros.h
    ../include/rec2_types.h

    brucetrk.c
    brucetrk.h
    car.c
    car.h
    controls.c
    controls.h
    crush.c
    crush.h
    cutscene.c
    cutscene.h
    demo.c
    demo.h
    depth.c
    depth.h
    drfile.c
    drfile.h
    drmem.c
    drmem.h
    displays.c
    displays.h
    drone.c
    drone.h
    errors.c
    errors.h
    explosions.c
    explosions.h
    flicplay.c
    flicplay.h
    font.c
    font.h
    globvars.c
    globvars.h
    globvrbm.c
    globvrbm.h
    globvrkm.c
    globvrkm.h
    globvrpb.c
    globvrpb.h
    grafdata.c
    grafdata.h
    graphics.c
    graphics.h
    init.c
    init.h
    intrface.c
    intrface.h
    input.c
    input.h
    loading.c
    loading.h
    main.c
    main.h
    netgame.c
    netgame.h
    oil.c
    oil.h
    opponent.c
    opponent.h
    options.c
    options.h
    pedestrn.c
    pedestrn.h
    physics.c
    physics.h
    powerups.h
    powerups.c
    raycast.c
    raycast.h
    smashing.c
    smashing.h
    sound.c
    sound.h
    spark.c
    spark.h
    skidmark.c
    skidmark.h
    structur.c
    structur.h
    temp.c
    temp.h
    tinted.c
    tinted.h
    utility.c
    utility.h
    video.c
    video.h
    world.c
    world.h
)
target_include_directories(c2_common
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>"
)
target_link_libraries(c2_common
    PUBLIC
        brender
        c2_hooks
        c2_platform
        S3::S3
        TIFF::TIFF
)
